# ds-harness-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHECKPOINTS.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
agents/: advisor.md  implementer.md  lead.md  reviewer.md
configs/: global.yaml
configs/models/: README.md
docs/: ARCHITECTURE.md  CONVENTIONS.md
docs/adr/: README.md
docs/memory/: backlog.md
docs/memory/examples/: backlog.json  backlog.md
docs/memory/examples/progress/: current.md  history.md  impl_FEAT-001.md  review_FEAT-001.md
docs/memory/progress/: current.md  history.md
docs/notes/: history.md
docs/references/: tooling-ci-precommit.md
docs/research-reports/: README.md
playground/: pf-m1-modeling-workflow-experiments_v2.md  pf-m2-modeling-workflow-all-features-agencias.md
playground/notes/: harness-codex-ds.md  harness-readiness-audit.md  product-requirement-documento-in-data-science.md  rr-agents-md-design.md
playground/references/: tooling-ci-precommit.md
playground/scripts/: evals_regression.py  feature_selection.py  filter_outliers_continuas.py  hpo_v5_opt_segments.ipynb  psi.py  vif.py
skills/create-adr/: SKILL.md  example.md
skills/ds-research-report/: SKILL.md  example.md
skills/function-conventions/: SKILL.md  example.py
src/lib/: config-example.py  config.py  experiment_tracking.py  model_io.py  paths.py
tests/: README.md
