[project]
name = "ds-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "llvmlite>=0.43",
    "matplotlib>=3.11.0",
    "numba>=0.60",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "torch>=2.12.1",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
experiments = [
    "mlflow>=1.27.0",
    "optuna>=4.9.0",
]
notebooks = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
