[project]
name = "ds-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "joblib>=1.3",
    "lightgbm>=4.3",
    "llvmlite>=0.43",
    "matplotlib>=3.8",
    "numba>=0.60",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "shap>=0.45",
    "statsmodels>=0.14",
    "torch>=2.4",
    "xgboost>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]
experiments = [
    "mlflow>=2.14",
    "optuna>=3.6",
]
notebooks = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
